<resources>
    <string name="app_name">Serve App</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <!--login & registration screen-->
    <string name="hint_mobile">Your Mobile no.</string>
    <string name="btn_login">LOGIN TO SERVE APP</string>
    <string name="err_msg_mobile">Enter your valid mobile no.</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="btn_register">REGISTER NOW</string>

    <string name="hint_fname">Your First Name</string>
    <string name="hint_lname">Your Last Name</string>
    <string name="hint_email">Your Email Address</string>
    <string name="btn_reg">REGISTER</string>
    <string name="already_member">Already Member ?</string>
    <string name="btn_login_to_your_account">LOGIN TO YOUR ACCOUNT</string>
    <!--end of login & registration screen-->

    <string name="hello_world">Fuck that shit</string>


    <string name="nav_item_home">Home</string>
    <string name="nav_item_myprofile">My Profile</string>
    <string name="nav_item_myservice_request">My Service Request</string>
    <string name="nav_item_notification">Notification</string>
    <string name="nav_item_addmy_service">Add My Service</string>
    <string name="nav_item_myserviceprofile">My Service Profile</string>
    <string name="nav_item_serviceorders">Service Orders</string>
    <string name="nav_item_about_serveapp">About Serve App</string>
    <string name="nav_item_faq">FAQ</string>
    <string name="nav_item_share_serveapp">Share Serve App</string>
    <string name="nav_item_support">Support</string>
    <string name="hello_blank_fragment">This is blank fragment</string>


    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_myprofile</item>
        <item>@string/nav_item_myservice_request</item>
        <item>@string/nav_item_notification</item>
        <item>@string/nav_item_addmy_service</item>
        <item>@string/nav_item_about_serveapp</item>
        <item>@string/nav_item_faq</item>
        <item>@string/nav_item_share_serveapp</item>
        <item>@string/nav_item_support</item>
    </string-array>


    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="user_name">User Name</string>
    <string name="user_location">User Location</string>

    <!-- activity_favourites -->
    <string name="activity_favourites_you_have">You have</string>
    <string name="activity_favourites_notifications">Notifications</string>
    <string name="activity_home_browse_by_category">Browse by Category</string>
    <string name="activity_order_details_requested_on">Requested on</string>
    <string name="at">at</string>
    <string name="status">Status:</string>
    <string name="activity_order_details_service_request_details">Service Request Details</string>
    <!-- activity favourites end -->

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome to Serve App!</string>
    <string name="slide_1_desc">You are one step away from experiencing awesomeness!</string>

    <string name="slide_2_title">Verified Professionals</string>
    <string name="slide_2_desc">The easiest way to hire experts for your daily service needs</string>

    <string name="slide_3_title">Discounts and Offers</string>
    <string name="slide_3_desc">Best discounts on every single service you request!</string>

    <string name="slide_4_title"> </string>
    <string name="slide_4_desc">Engineered by Infouna Technologies</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

</resources>
