<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/tools"
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="1dp"
            app:cardElevation="2dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/light_grey"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_name_ods"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text=""
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/activity_order_details_requested_on"
                        android:textColor="@color/secondary_text"
                        android:textSize="13sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/userdate_ods"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:text=""
                        android:textColor="@color/secondary_text"
                        android:textSize="13sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:text="@string/at"
                        android:textColor="@color/secondary_text"
                        android:textSize="13sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/usertime_ods"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:text=""
                        android:textColor="@color/secondary_text"
                        android:textSize="13sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_ods"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:text="@string/status"
                        android:textColor="@color/secondary_text"
                        android:textSize="13sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/status_ods"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:text=""
                        android:textColor="@color/textColorPrimary"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:background="@color/mute_text_color"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/activity_order_details_service_request_details"
                android:textColor="@color/secondary_text"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="7dp"
                android:text="Max. Budget:"
                android:textColor="@color/textColorPrimary" />

            <TextView
                android:id="@+id/max_budget_ods"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="7dp"
                android:text=""
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="Service Location:"
                    android:textColor="@color/textColorPrimary" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/service_loc_ods"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text=""
                    android:textColor="@color/textColorPrimary" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="7dp"
                android:text="Service Date:"
                android:textColor="@color/textColorPrimary" />


            <TextView
                android:id="@+id/date_ods"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="7dp"
                android:text=""
                android:textColor="@color/textColorPrimary" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="Additional Desc.:"
                    android:textColor="@color/textColorPrimary" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/desc_ods"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text=""
                    android:textColor="@color/textColorPrimary" />
            </RelativeLayout>
        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/mute_text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_decline_ods"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.5"
                    android:background="@color/red"
                    android:text="Decline Request"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

                <Button
                    android:id="@+id/btn_report_customer_ods"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.5"
                    android:background="@color/light_grey"
                    android:text="Report Customer"
                    android:textColor="@color/textColorPrimary" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_accept_ods"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.5"
                android:background="@color/green"
                android:text="Accept Request"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>